<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.diango.pos.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        
        <action
            android:id="@+id/action_home_to_payment"
            app:destination="@id/navigation_payment" />
            
        <action
            android:id="@+id/action_home_to_history"
            app:destination="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.diango.pos.presentation.ui.payment.PaymentFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.diango.pos.presentation.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.diango.pos.presentation.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>